--- a/wiki/cs/Mouse_navigation.html
+++ b/wiki/cs/Mouse_navigation.html
@@ -721,11 +721,8 @@
 <p><span id="Hardware_support"></span>
 </p>
 <h2><span class="mw-headline" id="Podpora_hardwaru">Podpora hardwaru</span></h2>
-<div class="mw-translate-fuzzy">
 <p>FreeCAD tak&eacute; podporuje n&#283;kter&eacute; <a href="../cs/3D_input_devices.html" title="3D input devices/cs">3D vstupn&iacute; za&#345;&iacute;zen&iacute;</a>.
-</p>
-</div>
-<p><span id="Recommended_navigation_for_macOS"></span>
+</p><p><span id="Recommended_navigation_for_macOS"></span>
 </p>
 <h2><span id="Doporu.C4.8Den.C3.A1_navigace_pro_macOS"></span><span class="mw-headline" id="Doporu&#269;en&aacute;_navigace_pro_macOS">Doporu&#269;en&aacute; navigace pro macOS</span></h2>
 <p>Ned&aacute;vno jsme dostali ozn&aacute;men&iacute; <a rel="nofollow" class="external text" href="http://forum.freecad.org/viewtopic.php?f=3&amp;t=3592&amp;start=0">na f&oacute;ru</a> od u&#382;ivatel&#367; Mac, &#382;e uveden&aacute; tla&#269;&iacute;tka my&scaron;i a kombinace kl&aacute;ves nefunguj&iacute; podle o&#269;ek&aacute;v&aacute;n&iacute;. Bohu&#382;el &#382;&aacute;dn&yacute; z v&yacute;voj&aacute;&#345;&#367; nevlastn&iacute; Mac a ani &#382;&aacute;dn&yacute; zpravideln&yacute;ch spolupracovn&iacute;k&#367;. Pot&#345;ebujeme Va&scaron;i pomoc ke zji&scaron;t&#283;n&iacute; kter&aacute; tla&#269;&iacute;tka my&scaron;i a kl&aacute;vesov&eacute; kombinace maj&iacute; uveden&eacute; probl&eacute;my abychom mohli aktualizovat tuto str&aacute;nku wiki.
@@ -753,13 +750,13 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111211647
+Cached time: 20260111211718
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.269 seconds
-Real time usage: 0.386 seconds
-Preprocessor visited node count: 1361/1000000
+CPU time usage: 0.256 seconds
+Real time usage: 0.356 seconds
+Preprocessor visited node count: 1360/1000000
 Post&#8208;expand include size: 64014/2097152 bytes
 Template argument size: 27001/2097152 bytes
 Highest expansion depth: 7/100
@@ -769,19 +766,19 @@ Unstrip post&#8208;expand size: 3889/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   78.085      1 -total
- 15.91%   12.421      8 Template:ASCII
-  9.30%    7.260      1 Template:Userdocnavi/cs
-  6.49%    5.069      1 Template:SiemensNX_Navigation
-  6.40%    4.994      1 Template:Blender_Navigation
-  5.55%    4.336      1 Template:Touchpad_Navigation
-  5.24%    4.094      1 Template:OpenSCAD_Navigation
-  4.28%    3.344      1 Template:Gesture_Navigation
-  4.23%    3.305      1 Template:SolidWorks_Navigation
-  4.17%    3.257     54 Template:KEY
+100.00%   69.795      1 -total
+ 13.44%    9.383      8 Template:ASCII
+  9.94%    6.938      2 Template:Docnav
+  9.26%    6.464      1 Template:Userdocnavi/cs
+  8.97%    6.261     54 Template:KEY
+  7.59%    5.299      1 Template:OpenSCAD_Navigation
+  6.84%    4.775      9 Template:MenuCommand
+  4.54%    3.171      1 Template:Blender_Navigation
+  4.24%    2.957      1 Template:Gesture_Navigation
+  3.89%    2.717      1 Template:Touchpad_Navigation
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111211646 and revision id 1736425. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:22156-0!canonical and timestamp 20260111211718 and revision id 1736429. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
