--- a/wiki/Package_Metadata.html
+++ b/wiki/Package_Metadata.html
@@ -1,10 +1,10 @@
 <link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Package Metadata</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-Package+Metadata&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="de/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--complete" title="Package Metadata (100% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="de/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--high" title="Package Metadata (97% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
-<li><a href="fr/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--complete" title="M&eacute;tadonn&eacute;es du package (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
-<li><a href="it/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--med" title="Pacchetto Metadata (21% translated)" lang="it" dir="ltr">italiano</a></li>
-<li><a href="pl/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--complete" title="Metadane pakietu (100% translated)" lang="pl" dir="ltr">polski</a></li>
-<li><a href="ru/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--med" title="&#1052;&#1077;&#1090;&#1072;&#1076;&#1072;&#1085;&#1085;&#1099;&#1077; &#1076;&#1083;&#1103; &#1086;&#1087;&#1080;&#1089;&#1072;&#1085;&#1080;&#1103; &#1055;&#1072;&#1082;&#1077;&#1090;&#1086;&#1074; &#1076;&#1086;&#1087;&#1086;&#1083;&#1085;&#1077;&#1085;&#1080;&#1081; (40% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
+<li><a href="fr/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--high" title="M&eacute;tadonn&eacute;es du package (97% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
+<li><a href="it/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--med" title="Pacchetto Metadata (20% translated)" lang="it" dir="ltr">italiano</a></li>
+<li><a href="pl/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--high" title="Metadane pakietu (97% translated)" lang="pl" dir="ltr">polski</a></li>
+<li><a href="ru/Package_Metadata.html" class="mw-pt-progress mw-pt-progress--med" title="&#1052;&#1077;&#1090;&#1072;&#1076;&#1072;&#1085;&#1085;&#1099;&#1077; &#1076;&#1083;&#1103; &#1086;&#1087;&#1080;&#1089;&#1072;&#1085;&#1080;&#1103; &#1055;&#1072;&#1082;&#1077;&#1090;&#1086;&#1074; &#1076;&#1086;&#1087;&#1086;&#1083;&#1085;&#1077;&#1085;&#1080;&#1081; (39% translated)" lang="ru" dir="ltr">&#1088;&#1091;&#1089;&#1089;&#1082;&#1080;&#1081;</a></li></ul></div>
 <div style="clear:right; margin-bottom: .5em; float: right; padding: .5em 0 .8em 1.4em; background: none;"><meta property="mw:PageProp/toc"></div>
 <h2><span class="mw-headline" id="Introduction">Introduction</span></h2>
 <p>Beginning in FreeCAD version 0.20, external addons (workbenches, macros, preference packs, bundles<sup><a href="Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></sup>, and generic "other" collections of tools<sup><a href="Release_notes_1.1.html" title="Release notes 1.1">introduced in 1.1</a></sup>) may be distributed with a metadata file describing the contents of the package. If the file "package.xml" is present it is read by FreeCAD and its contents used in various parts of the user interface. It is currently optional for workbenches and macros, and required for preference packs. This page documents the format of that metadata file. The format (and the contents of this Wiki page) are based on <a rel="nofollow" class="external text" href="https://ros.org/reps/rep-0149.html">REP 149</a>.
@@ -355,34 +355,34 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111210726
+Cached time: 20260111213418
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.082 seconds
-Real time usage: 0.113 seconds
-Preprocessor visited node count: 638/1000000
+CPU time usage: 0.087 seconds
+Real time usage: 0.188 seconds
+Preprocessor visited node count: 640/1000000
 Post&#8208;expand include size: 7217/2097152 bytes
 Template argument size: 2557/2097152 bytes
 Highest expansion depth: 5/100
 Expensive parser function count: 1/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 8159/5000000 bytes
+Unstrip post&#8208;expand size: 8144/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   16.804      1 -total
- 22.03%    3.702      1 Template:Powerdocnavi
- 16.54%    2.780     37 Template:Incode
- 11.66%    1.960      1 Template:Navigation_menu_2
- 10.91%    1.833      2 Template:VersionNote
- 10.35%    1.740      1 Template:Code
-  8.72%    1.465      3 Template:Version
-  8.50%    1.428      1 Template:TOCright
-  6.64%    1.116      1 Template:MenuCommand
+100.00%   40.493      1 -total
+ 27.79%   11.255      1 Template:Powerdocnavi
+ 16.15%    6.538      1 Template:Code
+ 14.98%    6.067      3 Template:Version
+ 11.88%    4.809      1 Template:Navigation_menu_2
+ 10.84%    4.390      2 Template:VersionNote
+  9.13%    3.695      1 Template:MenuCommand
+  6.11%    2.476     37 Template:Incode
+  4.08%    1.652      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:236741-0!canonical and timestamp 20260111210736 and revision id 1736341. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:236741-0!canonical and timestamp 20260111213418 and revision id 1736486. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="site.js"></script>
