--- a/wiki/Macro_FCCircularText.html
+++ b/wiki/Macro_FCCircularText.html
@@ -1,5 +1,5 @@
 <link href="site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">Macro FCCircularText</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="en" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="index.php?title=Special;Translate&amp;group=page-Macro+FCCircularText&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><a href="de/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--high" title="Makro FC Zirkul&auml;rer Text (87% translated)" lang="de" dir="ltr">Deutsch</a></li>
+<li><a href="de/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--high" title="Makro FC Zirkul&auml;rer Text (89% translated)" lang="de" dir="ltr">Deutsch</a></li>
 <li><span class="mw-pt-languages-ui mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="en" dir="ltr">English</span></li>
 <li><a href="es/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--med" title="Macro FCCircularText/es (34% translated)" lang="es" dir="ltr">espa&ntilde;ol</a></li>
 <li><a href="fr/Macro_FCCircularText.html" class="mw-pt-progress mw-pt-progress--complete" title="Macro CircularText (100% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
@@ -541,8 +541,8 @@ If the command is not used in the option chosen, it will be grayed out.
 			<div class="gallerytext">Ring Internal curve with subtraction.</div>
 		</li>
 		<li class="gallerybox" style="width: 335px">
-			<div class="thumb" style="width: 330px; height: 230px;"><span typeof="mw:File"><a href="index.php?title=FCCircularText_61.png&amp;filetimestamp=20180131135258&amp;.html" class="mw-file-description" title="Pivot character 0&deg;, 90&deg;, E."><img alt="Pivot character 0&deg;, 90&deg;, E." src="File/FCCircularText_61.png" decoding="async" width="267" height="200" class="mw-file-element" data-file-width="640" data-file-height="480"></a></span></div>
-			<div class="gallerytext">Pivot character 0&deg;, 90&deg;, E.</div>
+			<div class="thumb" style="width: 330px; height: 230px;"><span typeof="mw:File"><a href="index.php?title=FCCircularText_61.png&amp;filetimestamp=20180131135258&amp;.html" class="mw-file-description" title="Pivot character 0&deg;, 90&deg;, etc."><img alt="Pivot character 0&deg;, 90&deg;, etc." src="File/FCCircularText_61.png" decoding="async" width="267" height="200" class="mw-file-element" data-file-width="640" data-file-height="480"></a></span></div>
+			<div class="gallerytext">Pivot character 0&deg;, 90&deg;, etc.</div>
 		</li>
 </ul>
 </center>
@@ -916,35 +916,35 @@ Mode relief:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260110145428
+Cached time: 20260111213416
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.353 seconds
-Real time usage: 0.998 seconds
+CPU time usage: 0.318 seconds
+Real time usage: 0.389 seconds
 Preprocessor visited node count: 1762/1000000
 Post&#8208;expand include size: 39398/2097152 bytes
 Template argument size: 12093/2097152 bytes
 Highest expansion depth: 6/100
 Expensive parser function count: 10/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 65813/5000000 bytes
+Unstrip post&#8208;expand size: 65819/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  470.052      1 -total
-  3.70%   17.382     10 Template:Code
-  2.21%   10.401      1 Template:Caption
-  2.06%    9.674      1 Template:Userdocnavi
-  1.55%    7.276      1 Template:Draft_Tools_navi
-  1.53%    7.174      1 Template:Codeextralink
-  1.35%    6.335      1 Template:MenuCommand
-  1.30%    6.115     18 Template:FALSE
-  1.25%    5.865     14 Template:TRUE
-  1.24%    5.842      1 Template:Macro
+100.00%  192.867      1 -total
+  3.77%    7.262      1 Template:Draft_Tools_navi
+  2.72%    5.243      2 Template:Navigation_menu_2
+  2.44%    4.700     10 Template:Code
+  2.37%    4.570     10 Template:CheckBox
+  1.88%    3.627      6 Template:SpinBox
+  1.63%    3.151      7 Template:RadioButton
+  1.51%    2.909      1 Template:Userdocnavi
+  1.46%    2.815     14 Template:TRUE
+  1.25%    2.406      1 Template:Macro
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39549-0!canonical and timestamp 20260110145428 and revision id 1730786. Rendering was triggered because: api-parse
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39549-0!canonical and timestamp 20260111213417 and revision id 1736498. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
