--- a/wiki/Macro_FCCircularText.html
+++ b/wiki/Macro_FCCircularText.html
@@ -409,7 +409,7 @@ If the command is not used in the option chosen, it will be grayed out.
 <li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Run Comp</span>&nbsp;: Launches the macro and creates a Compound object of all characters.</li>
 <li><span class="ButtonTemplate" style="background: #f5f5f5; -moz-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); -webkit-box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); box-shadow: 0.1em 0.1em 0.2em rgba(0,0,0,0.1); border: 2px solid #989898; border-radius: 0.3em; padding: 0px 8px 1px 8px; font-weight:normal;color: #202122;">Run</span>    &nbsp;: Launches the macro</li></ul>
 <h3><span class="mw-headline" id="Parameters_available">Parameters available</span></h3>
-<p>Certain parameter are available in the parameters of FreeCAD see: <b>Menu &rarr; Tools &rarr; Edit parameters</b>
+<p>Certain parameter are available in the parameters of FreeCAD see: <b>Menu &rarr; Tools &rarr; Edit Parameters</b>
 </p>
 <ul><li>User parameter: BaseApp/Preferences/Macros/FCMmacros/FCCircularText</li></ul>
 <ul><li><ul><li><code>switchModeTextList</code>&nbsp;:
@@ -916,12 +916,12 @@ Mode relief:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111213416
+Cached time: 20260111213452
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.318 seconds
-Real time usage: 0.389 seconds
+CPU time usage: 0.342 seconds
+Real time usage: 0.534 seconds
 Preprocessor visited node count: 1762/1000000
 Post&#8208;expand include size: 39398/2097152 bytes
 Template argument size: 12093/2097152 bytes
@@ -932,19 +932,19 @@ Unstrip post&#8208;expand size: 65819/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  192.867      1 -total
-  3.77%    7.262      1 Template:Draft_Tools_navi
-  2.72%    5.243      2 Template:Navigation_menu_2
-  2.44%    4.700     10 Template:Code
-  2.37%    4.570     10 Template:CheckBox
-  1.88%    3.627      6 Template:SpinBox
-  1.63%    3.151      7 Template:RadioButton
-  1.51%    2.909      1 Template:Userdocnavi
-  1.46%    2.815     14 Template:TRUE
-  1.25%    2.406      1 Template:Macro
+100.00%  191.779      1 -total
+  2.28%    4.365      1 Template:Draft_Tools_navi
+  2.14%    4.099      2 Template:Navigation_menu_2
+  1.81%    3.462      7 Template:RadioButton
+  1.78%    3.417     10 Template:Code
+  1.61%    3.097      1 Template:Caption
+  1.41%    2.711     10 Template:CheckBox
+  1.15%    2.205      1 Template:Userdocnavi
+  1.13%    2.173      6 Template:SpinBox
+  1.04%    1.995      3 Template:ColoredText
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39549-0!canonical and timestamp 20260111213417 and revision id 1736498. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39549-0!canonical and timestamp 20260111213453 and revision id 1736501. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
