--- a/wiki/Macro_FCCircularText.html
+++ b/wiki/Macro_FCCircularText.html
@@ -916,12 +916,12 @@ Mode relief:
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111213452
+Cached time: 20260111213507
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.342 seconds
-Real time usage: 0.534 seconds
+CPU time usage: 0.273 seconds
+Real time usage: 0.344 seconds
 Preprocessor visited node count: 1762/1000000
 Post&#8208;expand include size: 39398/2097152 bytes
 Template argument size: 12093/2097152 bytes
@@ -932,19 +932,19 @@ Unstrip post&#8208;expand size: 65819/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%  191.779      1 -total
-  2.28%    4.365      1 Template:Draft_Tools_navi
-  2.14%    4.099      2 Template:Navigation_menu_2
-  1.81%    3.462      7 Template:RadioButton
-  1.78%    3.417     10 Template:Code
-  1.61%    3.097      1 Template:Caption
-  1.41%    2.711     10 Template:CheckBox
-  1.15%    2.205      1 Template:Userdocnavi
-  1.13%    2.173      6 Template:SpinBox
-  1.04%    1.995      3 Template:ColoredText
+100.00%  182.870      1 -total
+  4.95%    9.061      1 Template:Draft_Tools_navi
+  3.28%    6.007      2 Template:Navigation_menu_2
+  3.08%    5.629     10 Template:Code
+  2.23%    4.074     10 Template:CheckBox
+  2.19%    4.001      7 Template:RadioButton
+  2.17%    3.964      1 Template:Userdocnavi
+  1.84%    3.372      1 Template:Macro
+  1.77%    3.244      3 Template:ColoredText
+  1.75%    3.196      6 Template:SpinBox
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39549-0!canonical and timestamp 20260111213453 and revision id 1736501. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:39549-0!canonical and timestamp 20260111213507 and revision id 1736501. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="site.js"></script>
