--- a/wiki/bg/About_FreeCAD.html
+++ b/wiki/bg/About_FreeCAD.html
@@ -69,12 +69,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111193929
+Cached time: 20260111220121
 Cache expiry: 86400
 Reduced expiry: false
 Complications: []
-CPU time usage: 0.058 seconds
-Real time usage: 0.110 seconds
+CPU time usage: 0.079 seconds
+Real time usage: 0.145 seconds
 Preprocessor visited node count: 135/1000000
 Post&#8208;expand include size: 6988/2097152 bytes
 Template argument size: 2217/2097152 bytes
@@ -85,13 +85,13 @@ Unstrip post&#8208;expand size: 4227/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%    9.304      1 -total
- 77.45%    7.206      1 Template:Userdocnavi/bg
- 22.77%    2.118      1 Template:Navigation_menu_2
- 20.97%    1.951      2 Template:Docnav
+100.00%   16.332      1 -total
+ 59.18%    9.666      1 Template:Userdocnavi/bg
+ 39.79%    6.499      2 Template:Docnav
+ 12.37%    2.020      1 Template:Navigation_menu_2
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77245-0!canonical and timestamp 20260111193928 and revision id 1735859. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:77245-0!canonical and timestamp 20260111220121 and revision id 1735859. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
