--- a/wiki/cs/Feature_list.html
+++ b/wiki/cs/Feature_list.html
@@ -169,12 +169,12 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111132624
+Cached time: 20260111220126
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.093 seconds
-Real time usage: 0.170 seconds
+CPU time usage: 0.101 seconds
+Real time usage: 0.132 seconds
 Preprocessor visited node count: 244/1000000
 Post&#8208;expand include size: 7450/2097152 bytes
 Template argument size: 2265/2097152 bytes
@@ -185,15 +185,15 @@ Unstrip post&#8208;expand size: 3878/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   13.396      1 -total
- 60.80%    8.145      1 Template:Userdocnavi/cs
- 32.33%    4.331      1 Template:Navigation_menu_2
- 16.72%    2.240      2 Template:Docnav
-  8.97%    1.201      9 Template:Clear
-  8.71%    1.167      1 Template:TOCright
+100.00%    7.951      1 -total
+ 51.33%    4.081      1 Template:Userdocnavi/cs
+ 25.33%    2.014      1 Template:Navigation_menu_2
+ 19.97%    1.588      2 Template:Docnav
+ 10.68%    0.849      9 Template:Clear
+ 10.14%    0.806      1 Template:TOCright
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:21278-0!canonical and timestamp 20260111132624 and revision id 1733742. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:21278-0!canonical and timestamp 20260111220126 and revision id 1733742. Rendering was triggered because: api-parse
  -->
 </div>
 </div><script src="../site.js"></script>
