--- a/wiki/de/TechDraw_LeaderLine.html
+++ b/wiki/de/TechDraw_LeaderLine.html
@@ -1,5 +1,5 @@
 <link href="../site.css" rel="stylesheet" type="text/css"/><div class="mw-page-container"><h1 id="firstHeading" class="firstHeading mw-first-heading"><span class="mw-page-title-main">TechDraw LeaderLine/de</span></h1><?xml encoding="UTF-8"><div class="mw-content-ltr mw-parser-output" lang="de" dir="ltr"><div class="mw-pt-languages noprint navigation-not-searchable" lang="en" dir="ltr"><div class="mw-pt-languages-label">Other languages:</div><ul class="mw-pt-languages-list"><li><a href="../index.php?title=Special;Translate&amp;group=page-TechDraw+LeaderLine&amp;language=&amp;task=view.html" class="new" title="Start translation for this language" lang="" dir="ltr"></a></li>
-<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--high" lang="de" dir="ltr">Deutsch</span></li>
+<li><span class="mw-pt-languages-selected mw-pt-progress mw-pt-progress--complete" lang="de" dir="ltr">Deutsch</span></li>
 <li><a href="../TechDraw_LeaderLine.html" class="mw-pt-languages-ui mw-pt-progress mw-pt-progress--complete" title="TechDraw LeaderLine (100% translated)" lang="en" dir="ltr">English</a></li>
 <li><a href="../fr/TechDraw_LeaderLine.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw Ligne de rep&egrave;re (70% translated)" lang="fr" dir="ltr">fran&ccedil;ais</a></li>
 <li><a href="../it/TechDraw_LeaderLine.html" class="mw-pt-progress mw-pt-progress--high" title="TechDraw: Linea guida (70% translated)" lang="it" dir="ltr">italiano</a></li>
@@ -89,12 +89,10 @@
 <p><span id="Notes"></span>
 </p>
 <h2><span class="mw-headline" id="Hinweise">Hinweise</span></h2>
-<div class="mw-translate-fuzzy">
-<ul><li>Einer vorhandenen Hinweislinie k&ouml;nnen keine Punkte hinzugef&uuml;gt oder von ihr entfernt werden.</li>
+<ul><li>Es k&ouml;nnen keine Punkte zu einer bestehenden Hinweislinie hinzugef&uuml;gt oder daraus entfernt werden.</li>
 <li>Wurden w&auml;hrend der Erstellung der Hinweislinie keine Punkte festgelegt, wird eine kurze Linie in der Mitte der Ansicht positioniert. Es gibt keine M&ouml;glichkeit so eine Linie zu reparieren; sie sollte gel&ouml;scht werden.</li>
-<li>Standardm&auml;&szlig;ig ist die <a href="../de/TechDraw_Preferences.html#Anmerkung" title="TechDraw Preferences/de">Einstellung</a> <b>Hinweislinie automatisch horizontal</b> aktiviert. Das bedeutet, dass der letzte Abschnitt neuer Hinweislinien horizontal ausgerichtet wird. Ist nur ein Abschnitt vorhanden, ist das Ergebnis eine einzelne horizontale Linie.</li></ul>
-<ul><li>F&uuml;r vorhandene Hinweislinien kann diese automatische horizontale Ausrichtung ausgeschaltet werden, indem ihre <span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Auto Horizontal</b> angepasst wird.</li></ul>
-</div>
+<li>Standardm&auml;&szlig;ig ist die <a href="../de/TechDraw_Preferences.html#Annotation" title="TechDraw Preferences/de">Einstellung</a> <b>Hinweislinie automatisch horizontal</b> aktiviert. Das bedeutet, dass der letzte Abschnitt neuer Hinweislinien horizontal ausgerichtet wird. Ist nur ein Abschnitt vorhanden, ist das Ergebnis eine einzelne horizontale Linie.</li>
+<li>F&uuml;r vorhandene Hinweislinien kann diese automatische horizontale Ausrichtung ausgeschaltet werden, indem ihre <span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Auto Horizontal</b> angepasst wird.</li></ul>
 <p><span id="Properties"></span>
 </p>
 <h2><span class="mw-headline" id="Eigenschaften">Eigenschaften</span></h2>
@@ -103,12 +101,10 @@
 <h3><span class="mw-headline" id="Daten">Daten</span></h3>
 <p><span style="color: #fdfdfd; background-color: #909090; font-size: 112%; font-weight: bold; margin-bottom: .3em; padding: 0px 10px 1px 10px; page-break-after: avoid;">Base</span>
 </p>
-<div class="mw-translate-fuzzy">
 <ul><li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Start Symbol</b><span style="font-size:80%;"> (<code>Enumeration</code>)</span>: Das Symbol am Anfang der Hinweislinie. Optionen (unter Einstellungen): <span typeof="mw:File"><a href="../index.php?title=Arrowfilled.svg&amp;filetimestamp=20240522200625&amp;.html" class="mw-file-description"><img src="../File/Arrowfilled.svg" decoding="async" width="20" height="20" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Filled Arrow (Gef&uuml;llte Pfeilspitze), <span typeof="mw:File"><a href="../index.php?title=Arrowopen.svg&amp;filetimestamp=20240522200725&amp;.html" class="mw-file-description"><img src="../File/Arrowopen.svg" decoding="async" width="20" height="20" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Open Arrow (Offene Pfeilspitze), <span typeof="mw:File"><a href="../index.php?title=Arrowtick.svg&amp;filetimestamp=20240522200817&amp;.html" class="mw-file-description"><img src="../File/Arrowtick.svg" decoding="async" width="20" height="20" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Tick (Schr&auml;gstrich), <span typeof="mw:File"><a href="../index.php?title=Arrowdot.svg&amp;filetimestamp=20240522200553&amp;.html" class="mw-file-description"><img src="../File/Arrowdot.svg" decoding="async" width="20" height="20" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Dot (Punkt), <span typeof="mw:File"><a href="../index.php?title=Arrowopendot.svg&amp;filetimestamp=20240522200736&amp;.html" class="mw-file-description"><img src="../File/Arrowopendot.svg" decoding="async" width="20" height="20" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Open Circle (Ring), <span typeof="mw:File"><a href="../index.php?title=Arrowfork.svg&amp;filetimestamp=20240522200637&amp;.html" class="mw-file-description"><img src="../File/Arrowfork.svg" decoding="async" width="20" height="20" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Fork (Gabel), <span typeof="mw:File"><a href="../index.php?title=Arrowpyramid.svg&amp;filetimestamp=20240522200753&amp;.html" class="mw-file-description"><img src="../File/Arrowpyramid.svg" decoding="async" width="20" height="20" class="mw-file-element" data-file-width="64" data-file-height="64"></a></span> Filled Triangle (Gef&uuml;lltes Dreieck), None (Kein).</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>End Symbol</b><span style="font-size:80%;"> (<code>Enumeration</code>)</span>: Das Symbol am Ende der Hinweislinie. Wie vorher.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>X</b><span style="font-size:80%;"> (<code>Distance</code>)</span>: Die X-Koordinate der Hinweislinie relativ zur Ansicht.</li>
 <li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Y</b><span style="font-size:80%;"> (<code>Distance</code>)</span>: Die Y-Koordinate der Hinweislinie relativ zur Ansicht.</li></ul>
-</div>
 <p><span style="color: #fdfdfd; background-color: #909090; font-size: 112%; font-weight: bold; margin-bottom: .3em; padding: 0px 10px 1px 10px; page-break-after: avoid;">Leader</span>
 </p>
 <ul><li><span style="font-size:60%; padding-right:0.8em;">Daten-Eigenschaft</span><b>Leader Parent</b><span style="font-size:80%;"> (<code>Link</code>)</span>: Ansicht in der die Hinweislinie verankert ist.</li>
@@ -131,11 +127,8 @@
 </p>
 <h2><span class="mw-headline" id="Skripten">Skripten</span></h2>
 <p>Siehe auch: <a rel="nofollow" class="external text" href="https://freecad.github.io/SourceDoc/">Autogenerierte API-Dokumentation</a> und <a href="../de/FreeCAD_Scripting_Basics.html" title="FreeCAD Scripting Basics/de">Grundlagen der Skripterstellung in FreeCAD</a>.
+</p><p>Das Werkzeug Hinweislinie kann in <a href="../de/Macros.html" title="Macros/de">Makros</a> und &uuml;ber die <a href="../de/Python_Console.html" title="Python Console/de">Python-Konsole</a> mit den folgenden Funktionen verwendet werden:
 </p>
-<div class="mw-translate-fuzzy">
-<p>Das Werkzeug Hinweislinie kann in <a href="../de/Macros.html" title="Macros/de">Makros</a> und von der <a href="../de/Python.html" title="Python/de">Python</a>-Konsole aus mit den folgenden Funktionen verwendet werden:
-</p>
-</div>
 <div class="mw-highlight mw-highlight-lang-python mw-content-ltr" dir="ltr"><pre><span></span><span class="n">myPage</span> <span class="o">=</span> <span class="n">FreeCAD</span><span class="o">.</span><span class="n">ActiveDocument</span><span class="p">()</span><span class="o">.</span><span class="n">Page</span>
 <span class="n">myBase</span> <span class="o">=</span> <span class="n">FreeCAD</span><span class="o">.</span><span class="n">ActiveDocument</span><span class="p">()</span><span class="o">.</span><span class="n">View</span>
 <span class="n">leaderObj</span> <span class="o">=</span> <span class="n">FreeCAD</span><span class="o">.</span><span class="n">ActiveDocument</span><span class="o">.</span><span class="n">addObject</span><span class="p">(</span><span class="s2">"TechDraw::DrawLeaderLine"</span><span class="p">,</span> <span class="s2">"DrawLeaderLine"</span><span class="p">)</span>
@@ -191,35 +184,35 @@
     </div></div>
 <!-- 
 NewPP limit report
-Cached time: 20260111213453
+Cached time: 20260111213938
 Cache expiry: 86400
 Reduced expiry: false
 Complications: [show&#8208;toc]
-CPU time usage: 0.110 seconds
-Real time usage: 0.160 seconds
-Preprocessor visited node count: 944/1000000
+CPU time usage: 0.113 seconds
+Real time usage: 0.158 seconds
+Preprocessor visited node count: 941/1000000
 Post&#8208;expand include size: 37260/2097152 bytes
 Template argument size: 12909/2097152 bytes
 Highest expansion depth: 8/100
 Expensive parser function count: 2/100
 Unstrip recursion depth: 0/20
-Unstrip post&#8208;expand size: 3884/5000000 bytes
+Unstrip post&#8208;expand size: 3888/5000000 bytes
 -->
 <!--
 Transclusion expansion time report (%,ms,calls,template)
-100.00%   50.412      1 -total
- 38.50%   19.411     10 Template:PropertyData/de
- 33.25%   16.763     15 Template:Variable
- 22.14%   11.159     13 Template:Incode
- 11.70%    5.897      1 Template:TechDraw_Tools_navi/de
-  6.79%    3.421      5 Template:PropertyView/de
-  6.37%    3.210      2 Template:Navigation_menu_2
-  5.80%    2.925      1 Template:GuiCommand/de
-  4.84%    2.441      2 Template:Docnav/de
-  4.20%    2.119      2 Template:TitleProperty
+100.00%   44.602      1 -total
+ 21.22%    9.466      1 Template:TechDraw_Tools_navi/de
+ 14.98%    6.683     10 Template:PropertyData/de
+ 13.66%    6.093     15 Template:Variable
+ 12.86%    5.734      2 Template:Navigation_menu_2
+ 12.66%    5.646      5 Template:PropertyView/de
+  9.34%    4.167      1 Template:GuiCommand/de
+  8.33%    3.715      2 Template:TitleProperty
+  4.47%    1.995      2 Template:Docnav/de
+  4.07%    1.815      1 Template:Code
 -->
 
-<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:178092-0!canonical and timestamp 20260111213453 and revision id 1736500. Rendering was triggered because: edit-page
+<!-- Saved in parser cache with key freecadweb_db01-wiki_:pcache:idhash:178092-0!canonical and timestamp 20260111213938 and revision id 1736519. Rendering was triggered because: edit-page
  -->
 </div>
 </div><script src="../site.js"></script>
